# TinyLogger

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  README.md  README.zh-Hans.md  README.zh-Hant.md
.github/workflows/: build.yml
cmake/: TinyLoggerConfig.cmake.in
docs/: DEVELOPER.md  USER_GUIDE.md
examples/: README.md  benchmark.cpp  example.cpp  logger_config.json  speed_test.cpp  speed_test_config.json
include/TinyLogger/: config.h  distributor.h  logger.h  logger_builder.h  logger_error.h  logger_factory.h  printer.h  printer_console.h  printer_file.h  printer_null.h  queue_registry.h  ring_buffer.h  types.h
include/tiny_logger/: distributor.h  logger.h  logger_builder.h  logger_error.h  logger_factory.h  printer.h  ring_buffer.h  types.h
include/tiny_logger/printer/: console.h  file.h  null.h
src/: config.cpp  console.cpp  distributor.cpp  file.cpp  logger.cpp  logger_builder.cpp  logger_factory.cpp  null.cpp  printer_console.cpp  printer_file.cpp  printer_null.cpp  queue_registry.cpp  ring_buffer.cpp
test/: CMakeLists.txt  README.md  run_tests.bat  run_tests.sh  test_common.h  test_config.cpp  test_distributor.cpp  test_logger.cpp  test_printer.cpp  test_ring_buffer.cpp
test/configs/: test_console.json  test_file.json  test_multi.json  test_overflow.json
